# Promptach

./: .gitignore  CMakeLists.txt  LICENSE  Program.cs  Promptach.csproj  Promptach.sln  README.cmn-Hans-CN.md  README.md  flake.nix  main.cpp  nixosmodule.nix  package.nix
.github/workflows/: cachix.yml  cmake-single-platform.yml  dotnet.yml
Line/: ConsoleLine.cs  ConsoleSide.cs
Path/: GitBranch.cs  GitChild.cs  GitParent.cs  IsInGit.cs  Parent.cs
commandlineparser/: CMakeLists.txt  promptachcommandlineparser.cpp
core/: CMakeLists.txt  main.cpp  textinterface.h
core/line/: consoleline.cpp  consoleline.h  consoleside.cpp  consoleside.h
core/text/: gitBranch.cpp  gitChildPath.cpp  gitParentPath.cpp  path.cpp  texts.h
core/util/: isInGit.cpp
docs/: README.cmn-Hans-CN.md
docs/en_US/: README.md
docs/zh_CN/: README.md
line/: consoleline.cpp  consoleline.h  consoleside.cpp  consoleside.h
settings/: CMakeLists.txt  PromptachSettings_zh_CN.ts  main.cpp  pathaliastable.cpp  previewer.cpp  previewer.h  settings.qrc  settingswindow.cpp  settingswindow.h  settingswindow.ui  textsview.cpp  textsview_buttons.cpp
settingsbackend/: CMakeLists.txt  builtintextslist.h  settings.cpp  settings.h
src/: CMakeLists.txt
src/commandlineparser/: CMakeLists.txt  PromptachCommandLineParser_global.h  promptachcommandlineparser.cpp  promptachcommandlineparser.h
src/core/: CMakeLists.txt  main.cpp  textinterface.h  textloader.h  write.cpp  write.h
src/core/line/: consoleline.cpp  consoleline.h  consoleside.cpp  consoleside.h
src/displayer/: CMakeLists.txt  main.cpp
src/settings/: CMakeLists.txt  PromptachSettings_zh_CN.ts  main.cpp  main.qml  previewer.cpp  promptachsettings.cpp  promptachsettings.h  promptachsettings.json  settings.qrc  settingswindow.cpp  settingswindow.h  settingswindow.ui  textsview.cpp  textsview_buttons.cpp
src/settings/ui/: main.qml
src/settingsbackend/: CMakeLists.txt  PromptachSettingsBackend_global.h  settings.cpp  settings.h
src/texts/: CMakeLists.txt
src/texts/common/: CMakeLists.txt  texts.h
src/texts/gitbranch/: gitbranch.h
src/texts/gitchildpath/: gitchildpath.h
src/texts/path/: gitParentPath.cpp  path.h  replacePath.cpp
src/texts/time/: CMakeLists.txt  time.h
src/texts/username/: CMakeLists.txt  username.h
text/: gitBranch.cpp  gitChildPath.cpp  gitParentPath.cpp  path.cpp  texts.h
texts/: CMakeLists.txt  gitBranch.cpp  gitChildPath.cpp  gitParentPath.cpp  path.cpp  pathAliasTable.ui  pathaliastable.cpp  replaceSymbolLink.cpp  run.cpp  time.cpp  username.cpp  utils.h
texts/common/: replaceSymbolLink.cpp  run.cpp
texts/gitBranch/: CMakeLists.txt  gitBranch.cpp
texts/gitChildPath/: CMakeLists.txt  gitChildPath.cpp
texts/gitbranch/: CMakeLists.txt  gitbranch.h
texts/gitchildpath/: CMakeLists.txt  gitchildpath.h
texts/path/: CMakeLists.txt  path.cpp  path.h  pathaliastable.h
texts/time/: CMakeLists.txt  time.cpp  time.h
texts/username/: CMakeLists.txt  username.cpp
util/: settings.cpp  settings.h
